--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://sam-nishino.github.io/socialtech_GitHub">
   <meta property="og:title" content="SocialTech">
   <meta property="og:description" content="テスト">
-  <meta property="og:image" content="https://sam-nishino.github.io/socialtech_GitHub/index.html/images/logo.png">
+  <meta property="og:image" content="https://sam-nishino.github.io/socialtech_GitHub/images/logo.png">
   <link rel="stylesheet" href="style.css">
 </head>
 
