--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@GLoGHCtbXX7xjUV">
-  <meta property="og:url" content="https://sam-nishino.github.io/socialtech_GitHub">
+  <meta property="og:url" content="https://sam-nishino.github.io/socialtech_GitHub/">
   <meta property="og:title" content="SocialTech">
   <meta property="og:description" content="テスト">
   <meta property="og:image" content="https://sam-nishino.github.io/socialtech_GitHub/images/logo.png">
