--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- ヘッダー -->
   <header>
     <!-- ロゴ -->
-    <a href="index.html" id="logo"><img src="images/logo.png" alt="トップページに戻る"></a>
+    <a href="index.html" id="logo"><img src="images/logo.png" alt="トップページ"></a>
 
     <!-- PC用ナビゲーション -->
     <nav id="nav-pc">
